# dotconfig

./: .editorconfig  .gitignore  .teller.yml  .vals.yaml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.nu-scripts  Dockerfile.test  INSTALLATION.md  LOCAL_DEV.md  Makefile  PLATFORM.md  PLATFORM_QUICKSTART.md  QUICKSTART.md  README.md  TESTING.md  TEST_SUMMARY.md  Tiltfile  backup.sh  bacon.toml  bootstrap.sh  cargo-install.toml  docker-compose.dev.yml  docker-compose.yml  global-packages.json  install.sh  justfile  mprocs.yaml  rust-cli.Dockerfile  rust-toolchain.toml  test-docker.sh  test-install.sh  tmp-fix-prod.yml  tmp-fix-staging.yml  update.sh
.cargo/: bacon.toml  config.toml
.claude/: architecture.mmd
.fleet/: run.json  settings.json
.github/: tekton-pipeline.yaml
.github/workflows/: ci-cd.yml  ci.yml
app/native-app/: package.json
app/native-app/src/: App.tsx
app/native-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/api/: Cargo.toml  Dockerfile  justfile
apps/api/k8s/: deployment.yaml  hpa.yaml  kustomization.yaml
apps/api/src/: lib.rs  main.rs
apps/docs-app/: Cargo.toml
apps/docs-app/src/: app.rs  docs.rs  lib.rs  main.rs
apps/docs-app/src/components/: doc_page.rs  home.rs  mod.rs  not_found.rs  search.rs  sidebar.rs
apps/docs-app/src/routes/: mod.rs
brew/: Brewfile
bun/: .bunfig.toml
ci/: README.md  dagger.json  package.json
ci/dagger/: main.go
ci/legacy/src/: index.ts
config/brew/: Brewfile
config/cargo/: liner.toml
config/grafana/dashboards/: app-dashboard.json  dapr-dashboard.json
config/loki/: loki-config.yml
config/mcp/: README.md  servers.json
config/node/: package.json
config/prometheus/: alerts.yml  prometheus.yml
config/promtail/: promtail-config.yml
config/scripts/: README.md  devkit.sh  mcp.nu  nx-run.nu  upkg.nu
config/shell/: README.md  config.toml
config/uv/: tools.txt
crates/kube-tui/: Cargo.toml
crates/kube-tui/src/: app.rs  keybindings.rs  main.rs  resources.rs  ui.rs
crates/pg-cli/: Cargo.toml
crates/pg-cli/src/: main.rs
crates/pg-gen/: Cargo.toml
crates/pg-gen/src/: configmap.rs  lib.rs
docs/: KUBE_RS_LIMITATIONS.md  REFACTORING_GUIDE.md  resource-stats-operator.md  secret-rotation-procedure.md  sql.md
k8s-manifests/: app.yaml
k8s-manifests/examples/: README.md
k8s-manifests/examples/canary-deployment/: alerting.yaml  canary.yaml  gateway.yaml  hpa.yaml  istio-config.yaml  networking.yaml  resource-policy.yaml  scaledobject.yaml  webhook.yaml
k8s-manifests/examples/chaos/: COMPARISON.md  LITMUS_SETUP.md  README-LITMUS-NAMESPACE.md  README.md  advanced-chaos.yaml  experiments.yaml  io-chaos.yaml  litmus-advanced-chaos.yaml  litmus-experiments.yaml  litmus-install.yaml  litmus-io-chaos.yaml  litmus-namespace.yaml  (+6 more)
k8s-manifests/keda/: README.md  agents-scaler.yaml  cpu-memory-scaler.yaml  cron-scaler.yaml  external-scaler.yaml  http-scaler.yaml  operator-scaler.yaml  prometheus-scaler.yaml  redis-scaler.yaml
k8s-manifests/operator/: crds.yaml  cronjob-collector.yaml  deployment.yaml  rbac.yaml  webhooks.yaml
k8s-manifests/tauri/: backend.yaml  ci-build.yaml  web-frontend.yaml
k8s-manifests/taurus/: deployment.yaml  distributed.yaml
k8s-manifests/workflows/: CI-CD.md  README.md  argo-workflow.yaml
logs/: update_2026-04-13_141621.txt  update_2026-04-13_141637.json  update_2026-04-13_141639.yaml  update_2026-04-13_141640.toml  update_2026-04-13_181804.txt  update_2026-04-13_181821.json  update_2026-04-13_181838.yaml  update_2026-04-13_181910.toml  update_2026-04-13_181943.toml  update_2026-04-13_182031.toml  update_2026-04-13_182110.txt  update_2026-04-13_182321.txt  update_2026-04-13_182909.txt  update_2026-04-13_184357.txt
output/bash/: .bash_profile  .bashrc
scripts/: brew-preflight.sh  doctor.sh  outdated.sh  setup.sh
scripts/kcl/manager/cost/pricing-fetcher/: Cargo.toml
scripts/kcl/manager/cost/pricing-fetcher/src/: main.rs
scripts/kcl/manager/cost/pricing-fetcher/src/providers/: aws.rs  azure.rs  gcp.rs  mod.rs
scripts/nu/: index.nu  index.test.nu  secrets.nu
scripts/platform/examples/dapr-flagsmith/rust-client/: Cargo.toml
scripts/platform/examples/dapr-flagsmith/rust-client/src/: main.rs
scripts/platform/examples/rust-apps/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
scripts/platform/examples/rust-apps/dapr-service/: Cargo.toml
scripts/platform/examples/rust-apps/dapr-service/src/: main.rs
scripts/platform/examples/rust-apps/file-processor/: Cargo.toml
scripts/platform/examples/rust-apps/file-processor/src/: main.rs
scripts/platform/examples/rust-apps/k8s/: dapr-service.yaml  file-processor.yaml  llm-agent.yaml  queue-worker.yaml
scripts/platform/examples/rust-apps/llm-agent/: Cargo.toml
scripts/platform/examples/rust-apps/llm-agent/src/: main.rs
scripts/platform/examples/rust-apps/queue-worker/: Cargo.toml
scripts/platform/examples/rust-apps/queue-worker/src/: main.rs
scripts/platform/examples/rust-apps/shared/: Cargo.toml
scripts/platform/examples/rust-apps/shared/src/: lib.rs
scripts/platform/skills/templates/rust-skill/: Cargo.toml  skill.json
scripts/platform/skills/templates/rust-skill/src/: main.rs
src/: app.rs  config.rs  context.rs  errors.rs  lib.rs  main.rs  operator.rs  state.rs
src/actions/: cluster.rs  code_graph.rs  compose.rs  dashboard.rs  mod.rs  shit.rs
src/cluster_dashboard/: app_definition.rs  data.rs  mod.rs  ui.rs  views.rs
src/commands/: manager.rs  mod.rs  subcommands.rs
src/crates/: cli.rs  mod.rs  telemetry.rs  tracing.rs
src/operator/: connectors.rs  dependencies.rs  mod.rs
src/path1/: mod.rs
src/resource_stats/: cache.rs  mod.rs
src/traits/: command_context.rs  mod.rs
src/utils/: docker.rs  mod.rs
tests/: Makefile  e2e_tests.rs  integration_tests.rs
tests/k6/: api.test.js  config.js  full-stack.test.js  grafana.test.js  influxdb.test.js
tests/kubetest/: chainsaw-config.yaml
tests/testkube/: resource-stats-test.yaml
web-app/: Cargo.toml
web-app/src/: app.rs
web-app/src-tauri/: Cargo.toml  tauri.conf.json
zellij/layouts/: main.kdl
(+278 files in other folders)
