[package]
name = "dotconfig"
version = "0.1.0"
edition = "2021"
default-run = "operator"
description = "Cli app"
license = "MIT"
repository = "https://github.com/yurikrupnik/dotconfig"

[[bin]]
name = "dotconfig"
path = "src/main.rs"

[[bin]]
name = "operator"
path = "src/operator.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs", "process"] }
anyhow = "1.0"
async-trait = "0.1"
kube = {version = "2.0.1", features = ["config", "derive", "runtime"]}
k8s-openapi = {version = "0.26", features = ["latest"]}

serde = { version = "1.0", features = ["derive"] }
tracing = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter', 'json', 'serde_json'] }
thiserror = "2.0.16"
#uuid = "1.18.1"
#sqlx = "0.8.6"
serde_json = "1.0.145"
http = "1.3.1"
toml = "0.9"
dirs = "6.0"
neo4rs = "0.8"
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.5"
futures = "0.3"
#validator = "0.20.0"
#influxdb2 = "0.5"
#chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "3"
tempfile = "3"
serial_test = "3"
indoc = "2"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true
panic = "abort"

[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
