[package]
name = "dotconfig"
version = "0.1.0"
edition = "2021"
default-run = "operator"
description = "Cli app"
license = "MIT"
repository = "https://github.com/yurikrupnik/dotconfig"

[[bin]]
name = "dotconfig"
path = "src/main.rs"

[[bin]]
name = "operator"
path = "src/operator.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
futures = "0.3"
http = "1.4"
k8s-openapi = { version = "0.26", features = ["latest"] }
kube = { version = "2.0.1", features = ["config", "derive", "runtime"] }
neo4rs = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = "0.9"
tracing = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter', 'json', 'serde_json'] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3.2"
tempfile = "3"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true
panic = "abort"

[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
