[package]
name = "api-core"
version = "0.1.0"
edition = "2021"
description = "Shared API core logic for Tauri apps"
license = "MIT"

[lib]
name = "api_core"
path = "src/lib.rs"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "14"
