[package]
name = "pg-cli"
version = "0.1.0"
edition = "2024"
description = "Generate Kubernetes ConfigMaps from Postgres schema/migration SQL files"

[[bin]]
name = "pg-cli"
path = "src/main.rs"

[dependencies]
pg-gen = { path = "../pg-gen" }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
