[workspace]
resolver = "2"
members = [
    "queue-worker",
    "dapr-service",
    "llm-agent",
    "file-processor",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yuri Krupnik"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client/server
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Dapr
dapr = "0.15"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "streams"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Testing
tokio-test = "0.4"
