[package]
name = "pricing-fetcher"
version = "0.1.0"
edition = "2021"
description = "Fetches real-time cloud pricing from GCP, AWS, Azure APIs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Kubernetes (optional, for ConfigMap updates)
kube = { version = "0.95", features = ["client", "runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23", features = ["latest"], optional = true }

# GCP auth
gcp_auth = { version = "0.12", optional = true }

# AWS SDK
aws-config = { version = "1", optional = true }
aws-sdk-pricing = { version = "1", optional = true }

[features]
default = ["gcp", "aws", "azure"]
gcp = ["dep:gcp_auth"]
aws = ["dep:aws-config", "dep:aws-sdk-pricing"]
azure = []
kubernetes = ["dep:kube", "dep:k8s-openapi"]
