[package]
name = "dapr-flagsmith"
version = "0.1.0"
edition = "2021"
description = "Rust client for Dapr + Flagsmith feature flags"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
