[package]
name = "file-processor"
version.workspace = true
edition = "2021"
description = "CPU-intensive file processing skill with parallel execution"

[[bin]]
name = "file-processor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# CPU-intensive processing
rayon = "1.10"
walkdir = "2.5"
sha2 = "0.10"
regex = "1.11"
memmap2 = "0.9"
