[package]
name = "{{skill_name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
rayon = { version = "1.8", optional = true }

[features]
default = []
async = ["tokio"]
parallel = ["rayon"]

[profile.release]
opt-level = "z"
strip = true
lto = true
